<resources>
    <string name="app_name">Bookify</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="persons">Persons</string>
    <string name="details">Details</string>
    <string name="room_picture">Picture fo the room</string>
    <string name="sort">Sort by</string>
    <string name="price">Price</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
    <string name="remove_all">Remove all</string>
    <string name="search">Search</string>
    <string name="owner">Owner</string>
    <string name="reserve">Reserve</string>
    <string name="dateFromTo">Date from - Date to</string>
    <string name="top_locations">Top locations</string>
    <string name="top_accommodations">Top accommodations</string>
    <string name="favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="accommodation">Accommodation</string>
    <string name="all_users">Users</string>
    <string name="feedback">Feedback</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="rejected">Rejected</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="accommodations_request">Accommodations Requests</string>
    <string name="account">Account</string>
    <string name="reservations">Reservations</string>
    <string name="notifications">Notifications</string>
    <string name="free_wifi">Free WiFi</string>
    <string name="free_parking">Free parking</string>
    <string name="air_conditioning">Air conditioning</string>
    <string name="family_rooms">Family rooms</string>
    <string name="terrace">Terrace</string>
    <string name="garden">Garden</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="front_desk">24-hour front desk</string>
    <string name="bar">Bar</string>
    <string name="jacuzzi">Jacuzzi</string>
    <string name="sauna">Sauna</string>
    <string name="heating">Heating</string>
    <string name="luggage_storage">Luggage storage</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Diner</string>
    <string name="airport_shuttle">Airport shuttle</string>
    <string name="private_bathroom">Private bathroom</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="deposit_box">Deposit box</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="city_center">City center</string>
    <string name="reports">Reports</string>
    <string name="accommodation_type">Accommodation type</string>
    <string name="hotel">Hotel</string>
    <string name="apartment">Apartment</string>
    <string name="year">Year</string>
    <string name="download">Download</string>
    <string name="overall">Overall</string>
    <string name="for_accommodation">For accommodation</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="canceled">Canceled</string>
    <string name="restart">Restart</string>

    <string name="you_not_internet">You are not connected to the Internet</string>
    <string name="you_internet">You are connected to the Internet</string>
    <string name="login">Log in</string>
    <string name="connect">Connect</string>
    <string name="lost">You lost the connect</string>
    <string name="closing">Closing app</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="check_email">Check email</string>
    <string name="skip">Skip</string>
    <string name="forget_password">Forget your password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="comment">Comment</string>
    <string name="reason">Reason</string>
    <string name="report">Report</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="save_account">Save Changes</string>
    <string name="edit_password">Change Password</string>
    <string name="user_information">User Information</string>
    <string name="account_information">Account Information</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="previous">Previous</string>
    <string name="property_name">Property name</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_address">Street address</string>
    <string name="zip_code">Zip code</string>
    <string name="filters">What can guests use at your accommodation?</string>
    <string name="photos">Photos</string>
    <string name="upload">Upload</string>
    <string name="min_guests">Min guests</string>
    <string name="max_guests">Max guests</string>
    <string name="type">Type</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="cancellation_deadline">Cancellation deadline</string>
    <string name="reservation_acceptance">Reservation acceptance</string>
    <string name="price_per">Price per</string>
    <string name="person">Person</string>
    <string name="room">Room</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="check_dates">Check in - Check out</string>
    <string name="delete">Delete</string>
    <string name="price_eur">Price (€)</string>
    <string name="title_activity_notification_settings">NotificationSettingsActivity</string>
    <string name="notification_category">Notifications Category</string>
    <string name="new_reservations_requests">New Reservations Requests</string>
    <string name="new_profile_rating">New Profile Rating</string>
    <string name="reservation_cancellation">Reservation Cancellation</string>
    <string name="new_accommodation_rating">New Accommodation Rating</string>
    <string name="created_accommodations_requests">Created Accommodations</string>
    <string name="edited_accommodations_requests">Edited Accommodations</string>
    <string name="approve">Approve</string>
    <string name="new_reviews">New Reviews</string>
    <string name="reported_reviews">Reported Reviews</string>
    <string name="ignore">Ignore</string>
    <string name="reported_users">Reported Users</string>
    <string name="block">Block</string>
    <string name="search_user">Search User</string>
    <string name="guest">Guest</string>
    <string name="owner_info">Owner</string>
    <string name="more">More...</string>
    <string name="change">Change</string>
    <string name="basic_informations">Basic informations</string>
    <string name="accommodation_details">Accommodation details</string>
    <string name="amenities">Amenities</string>
    <string name="paymeny_details">Paymeny details</string>
    <string name="availability">Availability</string>
    <string name="report_guest">Report guest</string>
    <string name="report_owner">Report owner</string>
</resources>