<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications"
        app:key="pref_key_notification_enabled_settings">
        <SwitchPreference
            android:icon="@drawable/ic_notification"
            app:title="@string/notifications"
            app:key="pref_key_notifications_enabled"
            app:defaultValue="true"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_category"
        app:key="pref_key_notification_category_settings"
        app:dependency="pref_key_notifications_enabled">
        <CheckBoxPreference
            app:title="@string/new_reservations_requests"
            app:defaultValue="true"
            app:key="pref_key_new_res_req"
            app:icon="@drawable/ic_plus"
            />
        <CheckBoxPreference
            app:title="@string/new_profile_rating"
            app:defaultValue="true"
            app:key="pref_key_new_prof_rating"
            app:icon="@drawable/ic_allusers"/>
        <CheckBoxPreference
            app:title="@string/reservation_cancellation"
            app:defaultValue="true"
            app:key="pref_key_res_cancel"
            app:icon="@drawable/ic_reservations"/>
        <CheckBoxPreference
            app:title="@string/new_accommodation_rating"
            android:icon="@drawable/ic_accomodations"
            app:defaultValue="true"
            app:key="pref_key_new_acc_rating"/>

    </PreferenceCategory>

</PreferenceScreen>