<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accommodation.AccommodationFragmentPaymentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paymeny_details"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/cancellation_deadline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deadlineInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="142dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_per" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/rbtPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person" />

                <RadioButton
                    android:id="@+id/rbtRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>