<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragmentPersonalInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="text"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="142dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="text"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="142dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="phone"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="142dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guest" />

            <RadioButton
                android:id="@+id/rbtOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center|bottom"
                android:padding="45dp">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="30dp"
                    android:text="@string/next"
                    tools:layout_editor_absoluteX="157dp"
                    tools:layout_editor_absoluteY="390dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>